{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 143,
  "lineage": "8473fd0e-6c97-7b19-951c-f1fda6847815",
  "resources": [
    {
      "module": "module.sherman_gke.module.gke.module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "module.sherman_gke.provider.google"
    },
    {
      "module": "module.sherman_gke.module.bastion.module.iap_tunneling",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_from_iap_to_instances",
      "provider": "module.sherman_gke.provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-01-05T21:45:02.064-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sherman-minecraft/global/firewalls/allow-ssh-from-iap-to-tunnel",
            "log_config": [],
            "name": "allow-ssh-from-iap-to-tunnel",
            "network": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/global/networks/safer-cluster-network",
            "priority": 1000,
            "project": "sherman-minecraft",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/global/firewalls/allow-ssh-from-iap-to-tunnel",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": [
              "bastion@sherman-minecraft.iam.gserviceaccount.com"
            ],
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.sherman_gke.module.bastion.google_service_account.bastion_host",
            "module.sherman_gke.module.enabled_google_apis.google_project_service.project_services",
            "module.sherman_gke.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.sherman_gke.module.gke.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "module.sherman_gke.provider.google",
      "instances": []
    },
    {
      "module": "module.sherman_gke.module.gke.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "module.sherman_gke.provider.google",
      "instances": []
    },
    {
      "module": "module.sherman_gke.module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "module.sherman_gke.provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sherman-minecraft/global/networks/safer-cluster-network",
            "name": "safer-cluster-network",
            "project": "sherman-minecraft",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/global/networks/safer-cluster-network"
          },
          "dependencies": [
            "module.sherman_gke.module.enabled_google_apis.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "module": "module.sherman_gke.module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "module.sherman_gke.provider.google",
      "instances": []
    },
    {
      "module": "module.sherman_gke.module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "each": "list",
      "provider": "module.sherman_gke.provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-01-05T21:45:02.146-08:00",
            "id": "projects/sherman-minecraft/regions/us-central1/routers/safer-router",
            "name": "safer-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/global/networks/safer-cluster-network",
            "project": "sherman-minecraft",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/regions/us-central1/routers/safer-router"
          },
          "dependencies": [
            "module.sherman_gke.module.enabled_google_apis.google_project_service.project_services",
            "module.sherman_gke.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.sherman_gke.module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "module.sherman_gke.provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "sherman-minecraft/us-central1/safer-router/cloud-nat-0d8azi",
            "min_ports_per_vm": 64,
            "name": "cloud-nat-0d8azi",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sherman-minecraft",
            "region": "us-central1",
            "router": "safer-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.sherman_gke.module.cloud-nat.google_compute_router.router",
            "module.sherman_gke.module.cloud-nat.random_string.name_suffix",
            "module.sherman_gke.module.enabled_google_apis.google_project_service.project_services",
            "module.sherman_gke.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.sherman_gke.module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "module.sherman_gke.provider.google",
      "instances": [
        {
          "index_key": "us-central1/safer-cluster-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-05T21:45:02.248-08:00",
            "description": "This subnet is managed by Terraform",
            "gateway_address": "10.10.10.1",
            "id": "projects/sherman-minecraft/regions/us-central1/subnetworks/safer-cluster-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "safer-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/global/networks/safer-cluster-network",
            "private_ip_google_access": true,
            "project": "sherman-minecraft",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.0.0/18",
                "range_name": "ip-range-pods"
              },
              {
                "ip_cidr_range": "192.168.64.0/18",
                "range_name": "ip-range-svc"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sherman-minecraft/regions/us-central1/subnetworks/safer-cluster-subnet"
          },
          "dependencies": [
            "module.sherman_gke.module.enabled_google_apis.google_project_service.project_services",
            "module.sherman_gke.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}